[gd_scene load_steps=2 format=3 uid="uid://yx0wxii8oigk"]

[ext_resource type="Script" path="res://components/interactor/interactor_component.gd" id="1_rkn31"]

[node name="InteractorComponent" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_rkn31")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
